--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-typescript-starter",
-    "homepage": "https://RGilmartin.github.io/",
+    "homepage": "https://RGilmartin.github.io/InteriorDesignApp/",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
