--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,5 +45,5 @@ jobs:
               env:
                   user_name: "github-actions[bot]"
                   user_email: "github-actions[bot]@users.noreply.github.com"
-                  github_token: ${{ secrets.INTERIORDESIGN }}
+                  github_token: ${{ secrets.GH_TOKEN }}
                   repository: ${{ github.repository }}
