--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.1.1",
+        "react-color": "^2.19.3",
         "react-dnd": "^11.1.3",
         "react-dnd-html5-backend": "^11.1.3",
-        "react-bootstrap": "^2.1.1",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
         "typescript": "^4.5.5",
@@ -50,6 +51,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-color": "^3.0.6",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
         "eslint": "^8.7.0",
